WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
145312
Yellow highlight and DD popover don't go away when scrolling an iframe
https://bugs.webkit.org/show_bug.cgi?id=145312
Summary
Yellow highlight and DD popover don't go away when scrolling an iframe
Beth Dakin
Reported
2015-05-22 12:22:32 PDT
Yellow highlight and DD popover don't go away when scrolling an iframe
rdar://problem/19692334
Attachments
Patch
(1.33 KB, patch)
2015-05-22 12:31 PDT
,
Beth Dakin
thorton
: review+
Details
Formatted Diff
Diff
Patch
(2.05 KB, patch)
2015-05-22 13:15 PDT
,
Beth Dakin
thorton
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Beth Dakin
Comment 1
2015-05-22 12:31:58 PDT
Created
attachment 253600
[details]
Patch
Tim Horton
Comment 2
2015-05-22 13:03:49 PDT
Comment on
attachment 253600
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=253600&action=review
> Source/WebKit2/ChangeLog:11 > + Match what Lookup already does for their popover and dismiss our popovers on > + scroll.
We could probably get rid of the other way they're dismissed on scroll, now, if we want.
> Source/WebKit2/UIProcess/API/mac/WKView.mm:1351 > + [self _dismissContentRelativeChildWindowsWithAnimation:NO];
You should make sure this isn't too expensive. I think everything checks and short-circuits if there isn't currently anything installed, but ... double check?
Beth Dakin
Comment 3
2015-05-22 13:15:53 PDT
Created
attachment 253603
[details]
Patch
Tim Horton
Comment 4
2015-05-22 13:17:09 PDT
Comment on
attachment 253603
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=253603&action=review
> Source/WebKit2/UIProcess/WebPageProxy.cpp:-3689 > - m_pageClient.dismissContentRelativeChildWindows(false);
Are there other callers of this page client method? (there probably are, just checking)
Beth Dakin
Comment 5
2015-05-22 13:24:31 PDT
(In reply to
comment #4
)
> Comment on
attachment 253603
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=253603&action=review
> > > Source/WebKit2/UIProcess/WebPageProxy.cpp:-3689 > > - m_pageClient.dismissContentRelativeChildWindows(false); > > Are there other callers of this page client method? (there probably are, > just checking)
There are other callers, but good thought!
http://trac.webkit.org/changeset/184790
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug