Yellow highlight and DD popover don't go away when scrolling an iframe https://bugs.webkit.org/show_bug.cgi?id=145312 -and corresponding- rdar://problem/19692334

Reviewed by Tim Horton.

Match what Lookup already does for their popover and dismiss our popovers on
scroll.
* UIProcess/API/mac/WKView.mm:
(-[WKView scrollWheel:]):

This should not be needed anymore.
* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::pageDidScroll):



Canonical link: https://commits.webkit.org/163320@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@184790 268f45cc-cd09-0410-ab3c-d52691b4dbfc